# dagentic

./: .gitignore  Cargo.toml  README.md  gh-dagentic
.github/workflows/: copilot-review.yml  dagentic-review.yml  implement.yml  plan.yml  review-fixup.yml
caller-templates/: claude-implement.yml  claude-plan.yml  claude-review-fixup.yml  copilot-review.yml  dagentic-implement.yml  dagentic-plan.yml  dagentic-review-fixup.yml  dagentic-review.yml
issue-templates/: bug.yml  epic.yml  feature.yml
src/: config.rs  context.rs  labels.rs  main.rs  metadata.rs  pipeline.rs  templates.rs  timeline.rs
src/commands/: init.rs  list.rs  show.rs  status.rs  update.rs
