[package]
name = "gh-dagentic"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clapfig = { version = "0.12", default-features = false }
confique = "0.4"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
